Entirely revamp scheduling (should be less broken)